welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  snake()
  while(!posf()){
    
    
    
  }
  right()
}

def snake(){
  if (estFaceMur()){
    right()
    right()
  }
  for (i<-1 to 6){
    avance()
  }
  if (getDirection()== Direction.EST){
    left()
    avance()
    right()
  }
  if (getDirection()== Direction.EST){
    right()
    avance()
    left()
}

def posf():Boolean ={
  if ((estFaceMur())&&(getDirection()==Direction.EST)){
    left()
    if (estFaceMur()){
      return true
    }
    right()
  }
  return false
}